# OpenAerialMap

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  .stylelintrc.json  404.html  CNAME  CONTRIBUTING.md  FAQ.md  Justfile  NEW_PROVIDER.md  README.md  eslint.config.mjs  index.html  mkdocs.yml  package.json  pyproject.toml  sitemap.xml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: default.md  version_release.md
.github/_workflow-samples/: README.md  deploy-gh.yml  (+1 more)
app/: vite-env.d.ts
backend/global-mosaic/: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  gen_coverage_raster.py  gen_mosaic.py  gen_mosaic_hybrid.py  gen_mosaic_manual.py  pyproject.toml
backend/global-mosaic/output/: README.md
backend/global-mosaic/scripts/: gen_coverage_vector.py  gen_mosaic_hybrid.py  gen_mosaic_manual.py
backend/stac-ingester/: Dockerfile  README.md  compose.yaml  docker-compose.yml  pyproject.toml
decisions/: index.html
docs/: CNAME  backup-prod-pgstac.md  index.md  new-provider.md
frontend/: .babelrc  .dockerignore  .editorconfig  .env.template  .gitignore  .prettierrc  .stylelintrc.json  Dockerfile  README.md  _README.md  eslint.config.mjs  index.html  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite-plugin-port-scanner.ts  vite.config.mts
metadata/: OIN-image-metadata.json  README.md
notebooks/: pyproject.toml  titiler-pgstac.ipynb
recipes/: README.md
search/: search_index.json
test/: example.test.ts
(+64 files in other folders)
