[project]
name = "hotosm-global-mosaic"
version = "0.1.0"
description = "Generate a global mosaic for OAM on a schedule"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "affine>=2.4.0",
    "aiohttp>=3.12.15",
    "mercantile>=1.2.1",
    "minio>=7.2.16",
    "numpy>=2.3.2",
    "pmtiles>=3.4.1",
    "psycopg>=3.2.9",
    "rasterio>=1.4.3",
    "rio-tiler>=7.8.1",
    "shapely>=2.1.1",
]
