[project]
name = "hotosm-stac-ingester"
version = "0.1.0"
description = "Container for running STAC Ingestion for HOTOSM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "stactools-hotosm[ingest]",
]

[tool.uv.sources]
stactools-hotosm = { git = "https://github.com/hotosm/stactools-hotosm", rev = "fix/ingest-as-opt-dep" }
